src/browser/themes/shared/zen-browser-shared.css
/* ... */
#urlbar:not([extend="true"]) #identity-box:not(.chromeUI):not(.localResource) {
  margin-inline-end: 0 !important;
}

.urlbar-page-action {
  width: calc(var(--urlbar-min-height) - 5px - 2 * var(--urlbar-container-padding)) !important;
  height: calc(var(--urlbar-min-height) - 5px - 2 * var(--urlbar-container-padding)) !important;
  padding: 0 !important;
  justify-content: center !important;
  align-items: center !important;
}

.urlbar-page-action:not([hidden="true"]) {
  display: flex !important;
}

toolbar .toolbarbutton-1:not(.unified-extensions-item-action-button) {
  & > .toolbarbutton-icon,
  & > .toolbarbutton-badge-stack {
    width: calc(2 * var(--toolbarbutton-inner-padding) + 18px) !important;
    height: calc(2 * var(--toolbarbutton-inner-padding) + 18px) !important;
  }
}

toolbar .zen-sidebar-panel-button {
  & > .toolbarbutton-icon,
  & > .toolbarbutton-badge-stack {
    width: calc(2 * var(--toolbarbutton-inner-padding) + 20px) !important;
    height: calc(2 * var(--toolbarbutton-inner-padding) + 20px) !important;
  }
}

#identity-permission-box {
  margin: 0 5px 0 0 !important;
  border-top-left-radius: 0 !important;
  border-bottom-left-radius: 0 !important;
}

#identity-box:has(#identity-permission-box:is([hasPermissions], [hasSharingIcon])) #identity-icon-box {
  border-top-right-radius: 0 !important;
  border-bottom-right-radius: 0 !important;
  margin-right: 0 !important;
}

#notification-popup-box {
  border-radius: 999px;
  margin-right: 5px;
  transition: .2s;
  height: 100%;
  padding: 7px;
}

button.popup-notification-dropmarker {
  border-top-left-radius: 0 !important;
  border-bottom-left-radius: 0 !important;
}

.panel-footer:has(button.popup-notification-dropmarker:not([hidden="true"])) button.popup-notification-secondary-button {
  border-top-right-radius: 0 !important;
  border-bottom-right-radius: 0 !important;
}

.searchbar-engine-one-off-item {
  max-width: 20px;
  min-width: 20px !important;
  justify-content: center;
}

#downloadsHistory {
  margin-top: 5px
}

/* Toolbars customization */

#titlebar {
  height: 100%;
}

#navigator-toolbox {
  min-width: 55px;
  max-width: 55px;
}

#navigator-toolbox toolbar#TabsToolbar {
  margin: var(--zen-appcontent-separator-from-window);
  overflow: hidden;
  transition: .2s;
  flex-direction: column !important;
  padding: 5px 0;
  margin-right: 0 !important;
  -moz-window-dragging: no-drag;
  
  --zen-sidebar-action-button-width: 38px;
  padding-bottom: calc(5px + 5px); /* Taking into consideration the padding of the sidebar without being inlined */
}

#TabsToolbar-customization-target {
  flex-direction: column;
}

:root[customizing] .customization-target:not(#widget-overflow-fixed-list) {
  min-width: 0 !important;
}

toolbarpaletteitem {
  justify-content: center !important;
}

toolbarbutton#scrollbutton-down,
toolbarbutton#scrollbutton-up {
  display: none !important;
}

#toolbar-menubar {
  display: none;
}

.tab-label-container {
  display: none;
}

.tab-icon-stack > .tab-icon-image,
.tab-icon-stack > .tab-throbber {
  width: var(--zen-browser-tab-icon-size);
  height: var(--zen-browser-tab-icon-size);
  margin-inline-end: 0 !important;
}

.tab-icon-stack .tab-icon-image {
  transform: scale(0.5);
  opacity: 0;
  animation: zen-zoom-in 0.12s ease-in-out 0.3s forwards;
}

@keyframes zen-zoom-in {
  from {
    transform: scale(0.5);
    opacity: 0;
  }
  to {
    opacity: 1;
    transform: scale(1);
  }
}

.tab-background {
  display: none;
}

.tabbrowser-tab {
  --zen-browser-tab-icon-size: 18px;
  --tab-min-width: 36px !important;
  margin: 0 auto !important;
  border-radius: 8px;
  position: relative;
  color-scheme: var(--tab-selected-color-scheme);
  border: 2px solid transparent;
  background: transparent;
  padding: 0 !important;
  align-items: center;
  min-height: var(--tab-min-width); /* Make a box */
  animation: zen-slide-in 0.3s;
  width: calc(var(--zen-browser-tab-icon-size) + 2px);
  transition: .1s background, .1s border-color;
}

.tabbrowser-tab:hover {
  background: var(--toolbarbutton-hover-background);
}

.tabbrowser-tab:active,
.zen-sidebar-panel-button:active {
  transform: scale(0.9) !important;
}

.tab-stack {
  width: 30px !important;
  height: 30px !important;
  min-width: 30px !important;
  min-height: 30px !important;
  position: relative;
  display: flex;
  align-items: center;
  justify-content: center;
}

@keyframes zen-slide-in {
  from {
    transform: translateX(-10px);
    opacity: 0;
  }
  to {
    transform: translateX(0);
    opacity: 1;
  }
}

.tabbrowser-tab:not([fadein]) {
  display: none;
}

.tabbrowser-tab:is([multiselected="true"], [selected]) {
  background: var(--toolbarbutton-hover-background);
}

#private-browsing-indicator-with-label {
  display: none !important;
}

.tabbrowser-tab::after {/* Containers */
  background: var(--identity-tab-color, transparent);
  border-radius: 2px;
  height: 80%;
  width: 2px;
  position: absolute;
  top: 50%;
  transform: translateY(-50%);
  left: -2px;
  content: '';
  pointer-events: none;
}

.tabbrowser-tab {
  margin-inline-start: 0 !important;
  margin: 0 auto !important;
}

.tabbrowser-tab[pinned] {
  position: relative !important;
}

#tabbrowser-tabs:has(.tabbrowser-tab[pinned]) .tabbrowser-tab:nth-child(1 of :not([pinned]):not([hidden])) {
  margin-top: 15px !important;
  position: relative;
  overflow: visible;

  & .tab-stack::before {
    content: '';
    position: absolute;
    top: -11px;
    left: 0;
    width: 100%;
    height: 1.5px;
    border-radius: 1px;
    background: var(--zen-colors-border);
  }
}

.tab-close-button {
  position: absolute;
  display: none;
  left: 0;
  top: 50%;
}

.tabbrowser-tab:hover .tab-close-button {
  display: none; /* TODO: fix this? or maybe not? */
}

.tab-content {
  padding: 0 !important;
  width: fit-content;
}

.toolbar-items > toolbartabstop:first-child {
  display: none;
}

#TabsToolbar-customization-target {
  height: 100%;
}
/* ... */

